# isaac4ever

./: repolist
a5nov/: .gitignore  fixpdf.py  gitpush_v1.py  malbolge147.txt  pyproject.toml  pyproject1.toml  setup.old.py  setup.py  setup2.py
a5nov/auto_git_fmt/: auto_git_fmt.py  pyproject.toml
a5nov/auto_git_push/: .gitignore  README.md  pyproject.toml  setup.py
a5nov/auto_git_push/auto_git_push/: __init__.py  __main__.py
a5nov/b64/: b6.py
a5nov/blind_caller/: blindcaller.py
a5nov/clicker/: c1.py
a5nov/dupf/: dupf.py  duplicates.json  findup_xxhash.py  xfindupy.py
a5nov/fdroid/: README.md
a5nov/fileutils/: LICENSE.md  README.md  setup.py
a5nov/fileutils/examples/: example_usage.py  hash_examples.py
a5nov/fileutils/fileutils/: __init__.py
a5nov/filterpy/: cy_heu.c  cy_heu.pyx  cy_heu2.pyx  extractor.py  main.py  setup.py
a5nov/folderhash/: README.md  folder_hash.pyx  setup.py  test_folder_hash.py
a5nov/gdrive_uploader/: g2.py  gg1.py  gg2.py  openb.py  up1.py
a5nov/geo2/: batch22.py  blindreader.py  errhandler22.py  geo22.py  maxmind1.py  pygro22.py
a5nov/get_py_repos/: aaronpowell.txt  bradfitz.txt  coleam00.txt  dalathegreat.txt  dgtlmoon.txt  getpyrepos  junjiem.txt  pawurb.txt  squidfunk.txt  trungdq88.txt  users.txt  users1.txt
a5nov/gitlinks/: gitlinks.py
a5nov/gmailer/: gm.py
a5nov/iddle/: README.md  iddle.py  idl.py  midle.sh
a5nov/lic/: c2.py  clic  collectlic.py  collectorlic.py  uniker.py
a5nov/metadata/: req.txt  reqdist2  reqdister.py
a5nov/mp/: mp1.py
a5nov/newrepo/: newrepo.py
a5nov/passkey/: passkey_db.py  password_vault.db
a5nov/passkey/data/: a  a.csv  e.csv  gp1.csv  gp2.csv  mk.csv  np.csv
a5nov/perm/: fixperm.py  uvfix.py
a5nov/ppnvim/: highlight.py  test1.py  test2.py
a5nov/pyfileutilz/: README.md  setup.py
a5nov/pyfileutilz/examples/: example_usage.py  hash_examples.py
a5nov/pyfileutilz/pyfileutilz/: __init__.py
a5nov/repacker/: code.py
a5nov/scripts/: nanoconfigure
a5nov/simimg/: simimg1.py
a5nov/termux-gui/: bl.txt  gitlinks.txt
a5nov/time_it/: test1.py
a5nov/todel/: todel.py  todel.txt
a5nov/tokei/: tokei.py
a5nov/wget2/: .pre-commit-config.yaml  LICENSE  README.md
a5nov/wget2/python/: README.md  setup.py
a5nov/wget2/python/wget2/: __init__.py  cli.py
a5nov/wget2/wget2-deb/DEBIAN/: control
dh/: .gitignore  README.md  setup.py
dh/dh/: __init__.py  dh.py
dh/tests/: test1.py
pyfileutilz/: LICENSE.md  README.md  setup.py
pyfileutilz/examples/: example_usage.py  hash_examples.py
pyfileutilz/pyfileutilz/: __init__.py  compress.py  core.py  hashutil.py  operations.py  (+2 more)
pyrefactor/: README.md  pyproject.toml
pyrefactor/refactor_utils/: __init__.py  cli.py  core.py  movers.py  options.py  utils.py
thinc/: README.md  pyproject.toml  setup.cfg  setup.py
thinc/thinc/: about.py  compat.py  config.py  initializers.py  loss.py  model.py  mypy.py  optimizers.py  schedules.py  types.py  util.py
thinc/thinc/backends/: __init__.py  _cupy_allocators.py  _custom_kernels.py  _murmur3.cu  _param_server.py  cupy_ops.py  mps_ops.py  ops.py
thinc/thinc/layers/: __init__.py  add.py  array_getitem.py  bidirectional.py  cauchysimilarity.py  chain.py  clipped_linear.py  clone.py  concatenate.py  dish.py  dropout.py  embed.py  expand_window.py  gelu.py  hard_swish.py  hard_swish_mobilenet.py  hashembed.py  layernorm.py  linear.py  list2array.py  list2padded.py  list2ragged.py  logistic.py  lstm.py  map_list.py  maxout.py  mish.py  multisoftmax.py  mxnetwrapper.py  noop.py  padded2list.py  parametricattention.py  parametricattention_v2.py  pytorchwrapper.py  ragged2list.py  reduce_first.py  reduce_last.py  reduce_max.py  reduce_mean.py  reduce_sum.py  (+28 more)
thinc/thinc/shims/: mxnet.py  pytorch.py  pytorch_grad_scaler.py  shim.py  tensorflow.py  torchscript.py
txt_toolz/: README.md  pyproject.toml  setup.py
txt_toolz/tests/: test_advanced.py  test_files.py  test_nlp.py  test_strings.py
txt_toolz/txt_toolz/: __init__.py  advanced.py  extra.py  files.py  nlp.py  strings.py
