[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "refactor_utils"
version = "0.1.0"
description = "Utilities to refactor small python packages: extract funcs/constants/classes into modules"
authors = [
  {name = "you", email = "you@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
pyrefactor = "refactor_utils.cli:main"
